tests/errors/real_unsupported_kind_01.f90
program real_unsupported_kind_01
print *, real(1., 666)
end program
